Fix: scrollbar UI not support darkmode

--- a/assets/app.css
+++ b/assets/app.css
@@ -24,20 +24,17 @@ a {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    @apply bg-gray-300;
-    @apply dark:bg-gray-700;
+    @apply rounded-md;
+    @apply bg-gray-200/30;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
     @apply rounded-md;
-
-    @apply bg-gray-600;
-    @apply dark:bg-gray-400;
+    @apply bg-gray-400;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    @apply bg-gray-700;
-    @apply dark:bg-gray-300;
+    @apply bg-gray-500;
 }
